# frameos

./: .dockerignore  .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierrc  AGENTS.md  CLOUD-TODO.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Procfile  README.md  TODO-MULTI-PI-SD-IMAGE.md  TODO-t113-s3-buildroot.md  TODO.md  app.py  buildroot-images.json  cross-toolchain-images.json  docker-compose.yml  docker-entrypoint.sh  flake.nix  gpt.sh  install_service.sh  metrics-uuid  mprocs.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project-folders.json  requirements.in  requirements.txt  run.py  version.json  versions.json
.data/: frameos-cloud.json
.flox/: env.json
.flox/env/: manifest.toml
.github/workflows/: build-raspberry-image.yml  buildroot-base-image.yml  discord-release.yml  docker-publish-multi.yml  docker-publish.yml  e2e-docker.yml  frameos-buildroot.yml  frameos-cross-toolchain.yml  frameos-cross.yml  npm-publish.yml  pull-request-tests.yml  sync-timezones.yml  t113-s3-buildroot-image.yml  update-component-versions.yml
agent/: .gitignore  Makefile  README.md  agent.nimble  frame.json  frameos_agent.nimble  frameos_agent.service
agent/src/: agent.nim  frameos_agent.nim
apps/: apps.py
apps/clock/: config.json  frame.py
apps/crop/: config.json  frame.py
apps/download_url/: config.json  frame.py
apps/openai/: config.json  frame.py
apps/rotate/: config.json  frame.py
apps/scale/: frame.py
apps/unsplash/: config.json  frame.py
backend/: CLOUD_BACKUPS_TODO.md  MULTITENANCY_TODO.md  __init__.py  build_ai_embeddings  config.py  docker-start.sh  gpt.sh  list_devices.py  list_drivers.py  main.py  models.py  requirements.docker.in  requirements.in  requirements.txt  run.py  tasks.py  views.py
backend/_flask/: login.py  notest_login.py  notest_signup.py  signup.py
backend/app/: __init__.py  config.py  conftest.py  database.py  dependencies.py  fastapi.py  flask.py  forms.py  huey.py  main.py  middleware.py  models.py  redis.py  tasks.py  tenancy.py  views.py  websockets.py
backend/migrations/: alembic.ini  env.py
backend/old-flask/: __init__.py  huey.py
backend/templates/: login.html  register.html
client/: frame.py  requirements.txt
dashboard/: app.py  celery.py  old.py  requirements.in  requirements.txt  run.py
deploy/: Makefile  deploy.sh  dev.sh
device/: Dockerfile  frame.py  frameos.service  index.html  new.py  requirements.in  requirements.txt
docs/: api-triality.md  buildroot-allwinner-t113.md  buildroot-raspberry-pi-zero-2w.md  cloud-link.md  on-device-admin-security.md  on-device-admin.md
e2e/: Makefile  README.md  frame.json  makeapploaders.py  makescenes.py  makesnapshots.py  makezigsnapshots.py  run
embedded/esp32/components/frameos_display/: CMakeLists.txt  DEV_Config_esp.c  frameos_display.c  generate_selected_panel.py  photo_painter_pmic.c  photo_painter_pmic.h
embedded/esp32/components/frameos_display/include/: DEV_Config.h  Debug.h  frameos_display.h
embedded/esp32/components/frameos_nim/: CMakeLists.txt  frameos_nim_glue.c  frameos_nim_stub.c
embedded/esp32/components/frameos_nim/include/: frameos_nim.h
embedded/esp32/components/frameos_quickjs/: CMakeLists.txt  fos_qjs_glue.c
embedded/esp32/components/frameos_quickjs/include/: fos_qjs_glue.h
embedded/esp32/main/: CMakeLists.txt  fos_assets_sd.c  fos_assets_sd.h  fos_battery.c  fos_battery.h  fos_buttons.c  fos_buttons.h  fos_client.c  fos_client.h  fos_config.c  fos_config.h  fos_console.c  fos_console.h  fos_defaults.h  fos_http.c  fos_http.h  fos_ota.c  fos_ota.h  fos_scenes.c  fos_scenes.h  fos_status_screen.c  fos_status_screen.h  fos_wifi.c  fos_wifi.h  idf_component.yml  main.c
embedded/pico2/: .gitignore  CMakeLists.txt  README.md  ci_build_image.sh  main.c
fcp/: Procfile  README.md  fcp.db  huey.db  requirements.in  requirements.txt  run.py
fetch/: app.js  package-lock.json  package.json
files/: install.sh  uninstall.sh
frame/: .gitignore  Makefile  frame  frame.json  frame.nimble  frame.py  frameos.nimble  frameos.service  nim.cfg  requirements.in  requirements.txt
frameos/: .gitignore  Dockerfile  JS_TRANSPILER_TODO.md  Makefile  TEST_TODO_MEMORY.md  TODO-plugin-boundary-cleanup.md  config.nims  flake.nix  frame.json  frameos.deps  frameos.nimble  frameos.service  index.html  lock.json  lock.json.md  nim.cfg  requirements.in  requirements.txt  run.py  scenes.json  test-docker.sh
frameos-python/: Dockerfile  README.md  frameos.service  test.py
frontend/: build.mjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.dev.json  tsconfig.json  utils.mjs  vite.config.ts
old-flask-backend/: __init__.py
repo/: README.md
rust/: TODO.md
rust/frameos/: Cargo.toml
rust/frameos/docs/: external_interfaces.md  migration_strategy.md  nim_runtime_scope.md  parity_map.md  rust_cli_usage.md
rust/frameos/src/: apps.rs  config.rs  discovery.rs  e2e.rs  e2e_cli.rs  interfaces.rs  lib.rs  logging.rs  main.rs  manifests.rs  metrics.rs  models.rs  parity.rs  runtime.rs  scenes.rs  server.rs
rust/frameos/tests/: config_loading.rs  e2e_cli.rs  e2e_code_nodes.rs  e2e_rust_snapshots.rs  interfaces_cli.rs  manifest_contracts.rs  manifest_loading.rs  ported_apps.rs  runtime_parity.rs
rust/frameos/tests/fixtures/: apps-valid.json  frame-log-to-file.json  frame-valid.json  scenes-graph-valid.json  scenes-invalid.json  scenes-valid.json
rust/frameos/tests/fixtures/parity/: driver-invalid.json  driver-valid.json  renderer-invalid-scheduling.json  renderer-valid.json
rust/frameos/tests/fixtures/production/: apps.json  frame.json  scenes.json
scripts/: backend-docker.sh  bootstrap-t113-s3-buildroot.sh  build-t113-s3-frameos.sh  build-t113-s3-image.sh  docker-t113-s3-buildroot.sh  frameos-setup.sh  inspect-t113-s3-build.sh  package-t113-s3-image.sh  test-t113-s3-buildroot.sh
tools/: buildkit-debug.sh  files-download  files-upload  files_r2_sync.py  generate_release_notes.py  update_versions.py
zig/: INVENTORY.md  MIGRATION_PLAN.md  README.md  TODO.md  build.zig
(+2138 files in other folders)
