[package]
name = "frameos"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ctrlc = "3.4"
sha1 = "0.10"
base64 = "0.22"
xmltree = "0.11"

[lib]
path = "src/lib.rs"

[[bin]]
name = "frameos"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
